# zero-dep-chat

./: Cargo.toml  README.md
.github/workflows/: chat_server.yml
async-chat-client/: Cargo.toml
async-chat-client/src/: main.rs
chat-client/: Cargo.toml
chat-client/src/: main.rs
chat-server/src/: main.rs
src/: mod.rs
